# compressed-intvec

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark_results.csv
benches/: bench.rs  bench_codec.rs  bench_size.rs  create_intvec.rs  random_access.rs  sample_density.rs  vary_k.rs
python/: plot_random_access.py  plot_randomaccess.ipynb  plot_space.py
src/: codecs.rs  intvec.rs  lib.rs  main.rs
tests/: test_codecs.rs  test_delta.rs  test_gamma.rs
