[package]
name = "compressed-intvec"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5.1"
dsi-bitstream = "0.4.2"
mem_dbg = "0.1.8"
rand = "0.9.0"
rand_distr = "0.5.0"
serde = { version = "1.0.217", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.0"

[[bench]]
name = "random_access"
harness = false

[[bench]]
name = "bench_size"
harness = false

[profile.bench]
lto = true

[features]
default = []
serde = ["dep:serde"]
