[package]
name = "compressed-intvec"
version = "0.1.1"
edition = "2021"
authors = ["Luca Lombardo"]
description = "A compressed integer vector that stores values with instantaneous codes in a bitstream."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/lukefleed/compressed-intvec"
keywords = [
    "compression",
    "vector",
    "bitstream",
    "data-compression",
    "integer-encoding",
]
categories = ["data-structures", "compression", "algorithms"]
exclude = [".github/*", "python/*"]

[dependencies]
dsi-bitstream = "0.4.2"
mem_dbg = "0.1.8"
serde = { version = "1.0.217", optional = true }


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.0"
rand_distr = "0.5.0"

[[bench]]
name = "random_access"
harness = false

[[bench]]
name = "bench_size"
harness = false

[profile.bench]
lto = true

[features]
default = []
serde = ["dep:serde"]
